--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -29,6 +29,10 @@
   letter-spacing: 10px;
 }
 
+.curr_word_container {
+  opacity: 0;
+}
+
 .curr_word {
   position: fixed;
   top: 50%;
@@ -38,7 +42,7 @@
   transform: translate(-50%, -50%);
   .btn {
     width: 35px;
-    height: 35px;
+    //height: 35px;
     line-height: 35px;
     margin: 0px 1px;
     padding: 0;
@@ -55,6 +59,12 @@
   .unchoosable {
     border: 1px solid #f4f4f4;
     cursor: default !important;
+  }
+  .complete {
+    color: #8be0de;
+    font-size: 60px;
+    width: 60px;
+    line-height: 60px;
   }
 }
 
@@ -121,25 +131,20 @@
   top: 27%;
   left: 50%;
   width: 50%;
-  /* bring your own prefixes */
   transform: translate(-50%, -50%);
   span {
     display: block;
-    width: 50%;
     margin: 10px auto;
     letter-spacing: 10px;
     padding-left: 10px;
   }
-  // span:before {
-  //   content: " ";
-  //   display: block;
-  //   width: 15px;
-  //   height: 10px;
-  // }
   .glyphicon-option-vertical {
     color: #eee;
     padding-left: 20px;
     font-size: 12px;
+  }
+  .last_0 {
+    display: none;
   }
   .last_1 {
     font-size: 20px;
@@ -151,7 +156,7 @@
   }
   .last_3 {
     font-size: 16px;
-    color: #eee;
+    color: #ededed;
   }
   .last_4, .last_5 {
     font-size: 14px;
@@ -168,4 +173,113 @@
   a, a:hover, a:active, a:link, a:visited {
     color: #ccc;
   }
+}
+
+.definition {
+  position: fixed;
+  width: 100%;
+  .definition_content {
+    max-width: 250px;
+    color: #aaa;
+    text-align: center;
+    font-size: 13px;
+    white-space: pre-wrap;
+    margin: 0 auto;
+  }
+}
+
+.message_container {
+  display: none;
+  min-height: 100vh;
+  width: 100%;
+  text-align: center;
+  background-color: #8be0de;
+  color: white;
+  font-size: 16px;
+  padding-top: 20px;
+  #well_done {
+    font-weight: bold;
+    margin: 10px auto;
+    span {
+      margin: 0 5px;
+    } 
+  }
+  #path_length {
+    margin: 0 10px;
+    font-weight: bold;
+    display: none;
+  }
+  #completed_in {
+    margin-bottom: 30px;
+    display: none;
+  }
+}
+
+// .grad {
+//   background: #8be0de; /* For browsers that do not support gradients */
+//   background: -webkit-linear-gradient(left top, #8be0de, #237271); /* For Safari 5.1 to 6.0 */
+//   background: -o-linear-gradient(bottom right, #8be0de, #237271); /* For Opera 11.1 to 12.0 */
+//   background: -moz-linear-gradient(bottom right, #8be0de, #237271); /* For Firefox 3.6 to 15 */
+//   background: linear-gradient(to bottom right, #8be0de, #237271); /* Standard syntax */
+// }
+
+// .radial-grad {
+//   background: -webkit-radial-gradient(#8be0de, #09a09d); /* Safari 5.1 to 6.0 */
+//   background: -o-radial-gradient(#8be0de, #09a09d); /* For Opera 11.6 to 12.0 */
+//   background: -moz-radial-gradient(#8be0de, #09a09d); /* For Firefox 3.6 to 15 */
+//   background: radial-gradient(#8be0de, #09a09d); /* Standard syntax (must be last) */
+// }
+
+.path_word_container {
+  display: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  position: relative;
+  .path_word {
+    font-weight: bold;
+    font-size: 28px;
+    margin-bottom: 0px;
+  }
+  .path_word:hover + .path_word_definition {
+    display: block;
+  }
+  .path_word_definition {
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    white-space: pre-wrap;
+    max-width: 250px;
+    margin: 0px auto;
+    opacity: 1;
+  }
+}
+
+.not_last:after {
+  content: " ";
+  display: block;
+  height: 1px;
+  background: white;
+  width: 300px;
+  margin: 0px auto;
+  opacity: 0;
+}
+
+.last {
+  margin-bottom: 50px;
+}
+
+.btn_custom {
+  display: none;
+  background-color: white;
+  color: #8be0de;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 10px 20px;
+  box-shadow: 0px 0px 30px #e8f8ff;
+}
+
+.undo_link, .undo_link:active, .undo_link:hover, .undo_link:link, .undo_link:visited {
+  text-decoration: none;
 }
