--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -156,11 +156,19 @@
   }
   .last_3 {
     font-size: 16px;
-    color: #ededed;
+    color: #ececec;
   }
-  .last_4, .last_5 {
+  .last_4 {
+    font-size: 14px;
+    color: #ededed;
+  } 
+  .last_5 {
     font-size: 14px;
     color: #eee;
+  }
+  .last_6 {
+    font-size: 14px;
+    color: #efefef;
   }
 }
 
