--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -1,32 +1,58 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.start_word {
+:root {
+  // --main-background-color: #8be0de;
+  // --main-background-text-color: white;
+  // --main-border-color: #8be0de;
+  // --main-text-color: black;
+  // --unchoosable-color: #f4f4f4;
+  // --choices-background-color: white;
+  // --highlight-color: #8be0de;
+  // --choosable-hover-color: white;
+  // --modal-backdrop-color: #6a8389;
+  // --box-shadow-color: #e8f8ff;
+  // --word-choice-color: #337ab7;
+  // --word-choice-hover-color: black;
+  // --definition-color: #aaa;
+  // --complete-highlight-color: rgb(50, 163, 202);
+
+  --main-background-color: black;
+  --main-background-text-color: orange;
+  --main-border-color: orange;
+  --main-text-color: white;
+  --unchoosable-color: #f4f4f4;
+  --choices-background-color: white;
+  --highlight-color: black;
+  --choosable-hover-color: white;
+  --modal-backdrop-color: #5c5c5c;
+  --box-shadow-color: rgb(255, 235, 200);
+  --word-choice-color: orange;
+  --word-choice-hover-color: rgb(177, 136, 90);
+  --definition-color: #aaa;
+  --complete-highlight-color: rgb(165, 78, 7);
+}
+
+.start_word, .target_word {
   position: fixed;
-  top: 0;
-  left: 0;
+  z-index: 999;
+  font-size: 6vh;
+  line-height: 10vh;
+  height: 10vh;
   z-index: 999;
   width: 100%;
-  background-color: #8be0de;
-  color: white;
-  font-size: 26px;
-  line-height: 50px;
-  height: 50px;
+  background-color: var(--main-background-color);
+  color: var(--main-background-text-color);
   letter-spacing: 10px;
+  left: 0;
+}
+
+.start_word {
+  top: 0;
 }
 
 .target_word {
-  position: fixed;
   bottom: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  background-color: #8be0de;
-  color: white;
-  font-size: 26px;
-  line-height: 50px;
-  height: 50px;
-  letter-spacing: 10px;
 }
 
 .curr_word_container {
@@ -38,33 +64,31 @@
   top: 50%;
   left: 50%;
   width: 100%;
-  /* bring your own prefixes */
   transform: translate(-50%, -50%);
   .btn {
-    width: 35px;
-    //height: 35px;
-    line-height: 35px;
+    width: 7vh;
+    line-height: 7vh;
     margin: 0px 1px;
     padding: 0;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 5vh;
   }
   .choosable {
-    border: 1px solid #8be0de;
+    border: 1px solid var(--main-border-color);
   }
   .choosable:hover {
-    background-color: #8be0de;
-    color: white;
+    background-color: var(--main-border-color);
+    color: var(--choosable-hover-color);
   }
   .unchoosable {
-    border: 1px solid #f4f4f4;
+    border: 1px solid var(--unchoosable-color);
     cursor: default !important;
   }
   .complete {
-    color: #8be0de;
-    font-size: 60px;
-    width: 60px;
-    line-height: 60px;
+    color: var(--main-background-color);
+    font-size: 9vh;
+    width: 9vh;
+    line-height: 9vh;
   }
 }
 
@@ -73,19 +97,15 @@
 }
 
 .reorder_btn {
-  //position: absolute;
   position: absolute;
-  bottom: -12px;
-  left: 50px;
-  //right: 200px;
-  /* bring your own prefixes */
-  //transform: translate(-50%, -50%);
-  color: #8be0de;
-  font-size: 24px;
+  bottom: -2.7vh;
+  left: 10vh;
+  color: var(--main-border-color);
+  font-size: 5vh;
 }
 
 .modal-backdrop {
-  background-color: #6a8389;
+  background-color: var(--modal-backdrop-color);
   opacity: 0.8 !important;
 }
 
@@ -108,17 +128,17 @@
     padding: 0;
   }
   .next_word {
-    height: 50px;
-    line-height: 50px;
+    height: 9vh;
+    line-height: 9vh;
     margin: 0px 5px;
     padding: 0;
     font-weight: bold;
-    font-size: 26px;
-    border: 1px solid #8be0de;
+    font-size: 5vh;
+    border: 1px solid var(--main-border-color);
     margin: 10px auto;
     padding: 0px 10px 0px 20px;
     opacity: 1;
-    background-color: white;
+    background-color: var(--choices-background-color);
   }
   .next_word_container {
     background-color: none;
@@ -131,7 +151,13 @@
       padding-right: 13px;
     }
     .highlight {
-      color: #8be0de;
+      color: var(--highlight-color);
+    }
+    a:link, a:visited {
+      color: var(--word-choice-color);
+    }
+    .next_word:hover {
+      color: var(--word-choice-hover-color);
     }
   }	
 }
@@ -151,42 +177,42 @@
   .glyphicon-option-vertical {
     color: #eee;
     padding-left: 20px;
-    font-size: 12px;
+    font-size: 3vh
   }
   .last_0 {
     display: none;
   }
   .last_1 {
-    font-size: 20px;
+    font-size: 4.2vh;
     color: #ccc;
   }
   .last_2 {
-    font-size: 18px;
+    font-size: 3.8vh;
     color: #ddd;
   }
   .last_3 {
-    font-size: 16px;
+    font-size: 3.6vh;
     color: #ececec;
   }
   .last_4 {
-    font-size: 14px;
+    font-size: 3.4vh;
     color: #ededed;
   } 
   .last_5 {
-    font-size: 14px;
+    font-size: 3.4vh;
     color: #eee;
   }
   .last_6 {
-    font-size: 14px;
+    font-size: 3.4vh;
     color: #efefef;
   }
 }
 
 .reset {
   position: fixed;
-  top: 50px;
+  top: 11vh;
   right: 5px;
-  font-size: 20px;
+  font-size: 4vh;
   color: #ccc;
   a, a:hover, a:active, a:link, a:visited {
     color: #ccc;
@@ -197,10 +223,11 @@
   position: fixed;
   width: 100%;
   .definition_content {
-    max-width: 250px;
-    color: #aaa;
+    padding: 20px;
+    max-width: 500px;
+    color: var(--definition-color);
     text-align: center;
-    font-size: 13px;
+    font-size: 2.5vh;
     white-space: pre-wrap;
     margin: 0 auto;
   }
@@ -211,13 +238,15 @@
   min-height: 100vh;
   width: 100%;
   text-align: center;
-  background-color: #8be0de;
-  color: white;
-  font-size: 16px;
-  padding-top: 20px;
+  background-color: var(--main-background-color);
+  color: var(--main-background-text-color);
+  font-size: 2.5vh;
+  padding-top: 3vh;
   #well_done {
     font-weight: bold;
     margin: 10px auto;
+    margin-top: 5vh;
+    font-size: 3vh;
     span {
       margin: 0 5px;
     } 
@@ -228,25 +257,11 @@
     display: none;
   }
   #completed_in {
-    margin-bottom: 30px;
+    font-size: 2.8vh;
+    margin-bottom: 3vh;
     display: none;
   }
 }
-
-// .grad {
-//   background: #8be0de; /* For browsers that do not support gradients */
-//   background: -webkit-linear-gradient(left top, #8be0de, #237271); /* For Safari 5.1 to 6.0 */
-//   background: -o-linear-gradient(bottom right, #8be0de, #237271); /* For Opera 11.1 to 12.0 */
-//   background: -moz-linear-gradient(bottom right, #8be0de, #237271); /* For Firefox 3.6 to 15 */
-//   background: linear-gradient(to bottom right, #8be0de, #237271); /* Standard syntax */
-// }
-
-// .radial-grad {
-//   background: -webkit-radial-gradient(#8be0de, #09a09d); /* Safari 5.1 to 6.0 */
-//   background: -o-radial-gradient(#8be0de, #09a09d); /* For Opera 11.6 to 12.0 */
-//   background: -moz-radial-gradient(#8be0de, #09a09d); /* For Firefox 3.6 to 15 */
-//   background: radial-gradient(#8be0de, #09a09d); /* Standard syntax (must be last) */
-// }
 
 .path_word_container {
   display: none;
@@ -255,47 +270,52 @@
   position: relative;
   .path_word {
     font-weight: bold;
-    font-size: 28px;
+    font-size: 5vh;
     margin-bottom: 0px;
   }
   .path_word:hover + .path_word_definition {
     display: block;
   }
   .path_word_definition {
-    color: white;
+    color: var(--main-background-text-color);
     text-align: center;
-    font-size: 12px;
-    white-space: pre-wrap;
-    max-width: 250px;
+    font-size: 2.5vh;
+    //white-space: pre-wrap;
+    max-width: 500px;
     margin: 0px auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     opacity: 1;
   }
 }
 
-.not_last:after {
-  content: " ";
-  display: block;
-  height: 1px;
-  background: white;
-  width: 300px;
-  margin: 0px auto;
-  opacity: 0;
-}
-
-.last {
-  margin-bottom: 50px;
+.message_container {
+  // .path_word_container:not(:last-child):after {
+  //   content: " ";
+  //   display: block;
+  //   height: 1px;
+  //   background: var(--main-background-text-color);
+  //   width: 300px;
+  //   margin: 0px auto;
+  //   opacity: 0;
+  // }
+  .path_word_container:last-child {
+    margin-bottom: 50px; 
+  }
 }
 
 .btn_custom {
   display: none;
-  background-color: white;
-  color: #8be0de;
-  font-size: 20px;
+  background-color: var(--main-background-text-color);
+  color: var(--main-background-color);
+  font-size: 3vh;
   font-weight: bold;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 10px 20px;
-  box-shadow: 0px 0px 30px #e8f8ff;
+  box-shadow: 0px 0px 30px --box-shadow-color;
 }
 
 .undo_link, .undo_link:active, .undo_link:hover, .undo_link:link, .undo_link:visited {
