--- a/app/views/levels/show.html.erb
+++ b/app/views/levels/show.html.erb
@@ -1,123 +1,10 @@
- <span id="check_if_undo" data-undo="<%= @undo %>"></span>
-
-<div class="start_word text-center"><%= @level.start.upcase %></div>
-
-<div class="reset">
-  <%= link_to reset_level_path(@level.id) do %>
-    <span class="glyphicon glyphicon-refresh"></span>
-  <% end %>
-</div>
-
-<div class="history text-center">
-  <% if @history.length > 6 %>
-   <span class="glyphicon glyphicon-option-vertical"></span>
-  <% end %>
-
-  <% (-7..-2).to_a.each do |index| %>
-    <% if @history[index]%>
-      <% if @undo != "true" %>
-        <% index_from_curr = -(index) - 2 %> <%# originally -1 to be last_1, now last_0; use jquery to change to last_1 %>
-        <% steps = index_from_curr + 1 %>
-      <% else %>
-        <% index_from_curr = steps = -(index) - 1 %> <%# originally -1 to be last_1, now last_0; use jquery to change to last_1 %>
-      <% end %>
-
-      <%= link_to undo_level_path(@level.id, steps: steps), class: "undo_link" do %>
-        <span class="last_<%= index_from_curr %>"><%= @history[index]['word'].upcase %></span>
-      <% end %>
-    <% end %>
-  <% end %>
-</div>
-
-<div class="curr_word_container">
-  <div class="curr_word text-center">
-    <div style="color: red;"><%= flash[:notice] if flash[:notice]%></div>
-    <% @word.word.upcase.split("").each_with_index do |letter, index| %>
-      <% choosable = (@choices[index]) ? 'choosable' : 'unchoosable' %>
-      <span class="curr_word_letter_container">
-        <div class="btn text-center curr_word_letter <%= choosable %>" data-toggle='modal' data-target="#switch_index_<%= index %>">
-          <%= letter %>
-        </div>        
-        <% if index == (@word.word.length - 1 ) and @choices[nil] %>
-          <div class="reorder_btn" data-toggle='modal' data-target="#reorder_letters"><span class="glyphicon glyphicon-transfer"></span></div>
-        <% end %>
-      </span>
-    <% end %>
-    <% if @choices.empty? %>
-      <div class="dead_end">No possible choices</div>
-    <% end %>
-  </div>
-
-  <% if false %>
-  <% if @choices[nil] %>
-    <div class="reorder_btn" data-toggle='modal' data-target="#reorder_letters"><span class="glyphicon glyphicon-transfer"></span></div>
-  <% end %>
-  <% end %>
-
-  <div class="definition">
-    <div class="definition_content"><%= simple_format(@definition) %></div>
-  </div>
-</div>
-
-<% @choices.each do |changed_index, words| %>
-  <% id = changed_index ? "switch_index_#{changed_index}" : "reorder_letters" %>
-  <div id= <%= id %> class="choices modal fade" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          <% words.each do |word| %>
-            <div class="next_word_container text-center">
-              <% if false %>
-              <a href= <%= "/levels/#{params[:id]}/move?word=#{word}"%> >
-              <% end %>
-
-              <%= link_to move_level_path(@level.id, word: word, changed_index: changed_index.to_s) do %>  
-                <div class="btn next_word">
-                  <% word.upcase.split("").each_with_index do |letter, letter_index| %>
-                    <% unless changed_index.nil? %>
-                      <% highlight = (letter_index == changed_index) ? "highlight" : "" %>
-                    <% else %>
-                      <% highlight = "highlight" %>
-                    <% end %>
-                    <div class='next_word_letter <%= highlight %>'><%= letter %></div>
-                  <% end %>
-                </div>
-              <% end %> <%# </a> %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+<% if @undo %>
+ <span class="hidden" id="undo"></span>
 <% end %>
 
-<div class="target_word text-center"><%= @level.target.upcase %></div>
-
-<script>
-  $(document).on('turbolinks:load', function() {
-
-  if ($("#check_if_undo").data("undo") != true) {
-    setTimeout(function() {
-      if ($(".undo_link").length > 0 ) {
-        [...Array($(".undo_link").length - 1).keys()].forEach(function(index) {
-          $(".last_" + (index + 1) ).addClass("last_" + (index + 2), 500).removeClass("last_" + (index + 1), function() {
-          })
-        })
-      }
-      $(".last_0").addClass("last_1").fadeIn(500).removeClass("last_0");
-    }, 1000)
-
-    $(".last_5").delay(1000).slideUp(500).fadeOut(500);
-  } 
-
-  setTimeout(function() {
-    $(".curr_word_container").animate({opacity: "1"}, 500);
-  }, 1000);
-
-  $(".next_word").click(function() {
-    $(".curr_word_container").fadeOut(800);
-  })
-  
-  })
-
-</script>
+<%= render 'start_word' %>
+<%= render 'reset_button' %>
+<%= render 'history' %>
+<%= render 'curr_word_choices' %>
+<%= render 'choices_modal' %>
+<%= render 'target_word' %>
