--- a/app/views/levels/_curr_word_choice_letter.html.erb
+++ b/app/views/levels/_curr_word_choice_letter.html.erb
@@ -3,6 +3,6 @@
     <%= letter %>
   </div>        
   <% if index == (@word.word.length - 1 ) and @choices[nil] %>
-    <div class="reorder_btn" data-toggle='modal' data-target="#reorder_letters"><span class="glyphicon glyphicon-transfer"></span></div>
+    <div class="reorder_btn"><span class="glyphicon glyphicon-transfer"></span></div>
   <% end %>
 </span>
