--- a/app/views/levels/complete.html.erb
+++ b/app/views/levels/complete.html.erb
@@ -1,7 +1,1 @@
-<span class:"hidden" id="level_complete"></span>
-
-<%= render 'start_word' %>
-<%= render 'history' %>
-<%= render 'curr_word_disabled' %>
-<%= render 'target_word' %>
-<%= render 'completed_message' %>
+<%= render 'complete_as_partial' %>
