--- a/app/views/levels/_completed_message.html.erb
+++ b/app/views/levels/_completed_message.html.erb
@@ -1,10 +1,12 @@
 <div class="message_container">
   <div class="message">
     <div id="well_done">WELL <span></span> DONE</div>
-    <div id="completed_in">YOU HAVE COMPLETED IN <span id="path_length"><%= @history.length - 1 %></span> MOVES</div>
-    
+    <div id="completed_in">YOU HAVE COMPLETED IN <span id="path_length"><%= @history.length - 1 %></span><%= pluralize_without_count((@history.length - 1), 'move').upcase %></div>
     <%= render 'history_all' %>
-    <%= link_to "Play Again?", reset_level_path(@level) , class:"btn btn_custom" %>
-
+    <%= render 'achievement' if within_optimal?  %>
+    <div class="next_level_btn_container">
+      <%= link_to "Next Level", level_path(@level.id + 1) , class:"btn btn_custom next_level", remote: true %>
+      <%= link_to "Play Again?", reset_level_path(@level) , class:"play_again_link", remote: true %>
+    </div>
   </div>
 </div>
