--- a/app/views/levels/_curr_word_disabled.html.erb
+++ b/app/views/levels/_curr_word_disabled.html.erb
@@ -1,10 +1,17 @@
 <div class="curr_word_container">
   <div class="curr_word text-center">
     <% @word.word.upcase.split("").each_with_index do |letter, index| %>
-      <div class="btn text-center curr_word_letter"><%= letter %></div>
+        <div class="btn text-center curr_word_letter"><%= letter %></div>
     <% end %>
 
     <%= render 'word_definition' %>
+
+    <% unless @complete %>
+      <div class="no_moves_left">
+      NO MOVES LEFT
+      </div>
+    <% end %>
+
   </div>
 
 </div>
