--- a/app/views/levels/_history_all.html.erb
+++ b/app/views/levels/_history_all.html.erb
@@ -1,5 +1,6 @@
 <div> <%# this div is necessary to select last-child element in css %>
-  <% @history.each do |record| %>
+  <% @history.each_with_index do |record, index| %>
+  <%#= binding.pry if index == 1 %>
     <div class="path_word_container">
       <span class="path_word">
         <% used_word(record).upcase.split("").each_with_index do |letter, letter_index| %>
