--- a/app/views/levels/show.html.erb
+++ b/app/views/levels/show.html.erb
@@ -1,10 +1,1 @@
-<% if @undo %>
- <span class="hidden" id="undo"></span>
-<% end %>
-
-<%= render 'start_word' %>
-<%= render 'reset_button' %>
-<%= render 'history' %>
-<%= render 'curr_word_choices' %>
-<%= render 'choices_modal' %>
-<%= render 'target_word' %>
+<%= render 'show_as_partial' %>
