--- a/app/views/levels/_completed_message.html.erb
+++ b/app/views/levels/_completed_message.html.erb
@@ -5,7 +5,7 @@
     <%= render 'history_all' %>
     <%= render 'achievement' if within_optimal?  %>
     <div class="next_level_btn_container">
-      <%= link_to "Next Level", level_path(@level.id + 1) , class:"btn btn_custom next_level", remote: true %>
+      <%= link_to "Next Level", level_path(@level.id + 1, next_level: true) , class:"btn btn_custom next_level", remote: true %>
       <%= link_to "Play Again?", reset_level_path(@level) , class:"play_again_link", remote: true %>
     </div>
   </div>
