--- a/app/views/levels/_limit_count.html.erb
+++ b/app/views/levels/_limit_count.html.erb
@@ -3,7 +3,7 @@
     <div class="limit_dot glyphicon glyphicon-chevron-down"></div>
   <% end %>
 
-  <% if within_optimal? %>
+  <% if within_optimal? and limit_exist_after_optimal %>
     <div class="limit_dot glyphicon glyphicon-flag"></div>
   <% end %>
 
@@ -13,7 +13,8 @@
     <% end %>
   <% end %>
   
-  <% if limit_exist_after_optimal %>
+  <%# if limit_exist_after_optimal %>
     <div class="limit_dot glyphicon glyphicon-remove-circle"></div>
-  <% end %>
+  <%# end %>
+
 </div>
