--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -239,7 +239,7 @@
   opacity: 0.8;
   .limit_dot {
     width: 4vh;
-    height: 4vh;
+    height: 5vh;
     text-align: center;
     font-size: 4vh;
     display: block;
@@ -371,3 +371,17 @@ iframe {
   display: none;
 }
 
+#instructions {
+  color: #aaa;
+  font-size: 2vh;
+  text-align: center;
+  span {
+    font-size: 2.5vh;
+    color: var(--main-background-color);
+  }
+}
+
+.instruction_btn {
+  font-weight: bold;
+  margin-left: 5px;
+}
