--- a/app/views/levels/_reset_button.html.erb
+++ b/app/views/levels/_reset_button.html.erb
@@ -2,4 +2,34 @@
   <%= link_to reset_level_path(@level.id), remote: true do %>
     <span class="glyphicon glyphicon-refresh"></span>
   <% end %>
+  <div class="instruction_btn" data-toggle='modal' data-target="#instructions">
+    ?
+  </div>
+</div>
+
+<div id="instructions" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+
+      Your goal is to change the word at the top, i.e. <span><%= @level.start.upcase %></span>,<br>
+      to the word at the bottom, i.e. <span><%= @level.target.upcase %></span>.<br><br>
+
+      To do so, you must change the word,<br>
+      <span>ONE LETTER AT A TIME</span>,<br>
+      or <span>REORDER THE LETTERS</span> of the current word.<br><br>
+
+      Try clicking on any letter in the middle of the screen,<br>
+      or click on the reorder button (if available).<br><br>
+
+      Each level has a limited number of moves,<br>
+      displayed at the top left corner.<br>
+      Click on the greyed out words near the top to backtrack.<br><br>
+
+      Aim for the optimal solution <span class="glyphicon glyphicon-flag"></span><br>
+      if you are tough enough to take on the challenge!
+
+      </div>
+    </div>
+  </div>
 </div>
