fixed some errors

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -218,6 +218,7 @@
     font-size: 3.4vh;
     color: #efefef;
   }
+
 }
 
 .reset, .limit_count {
@@ -352,6 +353,7 @@
     display: block;
     text-decoration: none;
     color: white;
+    margin-bottom: 50px;
   }
 }
 
