--- a/app/views/levels/_reset_button.html.erb
+++ b/app/views/levels/_reset_button.html.erb
@@ -5,6 +5,9 @@
   <div class="instruction_btn" data-toggle='modal' data-target="#instructions">
     ?
   </div>
+  <div class="music_btn">
+    <span class="glyphicon glyphicon-music"></span>
+  </div>
 </div>
 
 <div id="instructions" class="modal fade" role="dialog">
