working on index

--- a/app/views/levels/_reset_button.html.erb
+++ b/app/views/levels/_reset_button.html.erb
@@ -6,7 +6,7 @@
     ?
   </div>
   <div class="music_btn">
-    <span class="glyphicon glyphicon-music"></span>
+    <span class="glyphicon glyphicon-volume-off"></span>
   </div>
 </div>
 
