--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -268,7 +268,7 @@
     max-width: 800px;
     color: var(--definition-color);
     text-align: center;
-    font-size: 1.7vh;
+    font-size: 12px;
     white-space: pre-wrap;
     margin: 0 auto;
   }
@@ -332,9 +332,9 @@
   .path_word_definition {
     color: var(--main-background-text-color);
     text-align: center;
-    font-size: 2.5vh;
+    font-size: 12px;
     //white-space: pre-wrap;
-    max-width: 500px;
+    max-width: 80vw;
     margin: 0px auto;
     margin-top: 10px;
     margin-bottom: 20px;
